Overall refinement + declaration of oath

--- a/001Cover.tex
+++ b/001Cover.tex
@@ -10,7 +10,7 @@
 \textsc{\Large VAWi Project Thesis}\\[0.8cm] 
 \textsc{\large M.Sc. Business Information Technology}\\[0.5cm]
 \HRule \\[0.4cm]
-{\Large Improving Data Warehouse Systems by applying concepts of Process-Driven and Event-Based Microservice Architectures}
+{\Large Improving Data Warehouse Systems by Applying Concepts of Process-Driven and Event-Based Microservice Architectures}
 \HRule \\[1cm]
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
