--- a/002Introduction.tex
+++ b/002Introduction.tex
@@ -1,17 +1,18 @@
 \section{Introduction}
 \label{sec:intro}
-''The world’s most valuable resource is no longer oil, but data'' \cite{dataIsOil}\newline
-This was stated in an article published by 'The Economist' in 2017 and expresses quite well how important and valuable data currently is. In the last past three years this can definitively be validated. This can lead to negative incidents as seen 2016 during the Brexit referendum or regarding the Cambridge Analytica scandal. But next to that a lot of companies try to generate customer benefits using historicised data.\newline
-To achieve this, there is a need for special systems handling such an intensive amount of data. Basic requirements are gathering of data from heterogeneous sources, transformation and enrichment as well as the deployment for analytical applications. Of course are non-functional requirements as performance or real-time actuation also necessary while talking about specifications.\newline
+\begin{quote}
+    ''The world’s most valuable resource is no longer oil, but data'' \cite{dataIsOil}
+\end{quote}
+This was stated in an article published by ''The Economist'' in 2017 and it expresses quite well how important and valuable data currently is. In the past three years this thesis can definitively be validated. This can lead to negative incidents as seen in 2016 during the Brexit referendum or with the Cambridge Analytica scandal. A lot of companies try to generate customer benefits using historicised data.\newline
+To achieve this, there is a need for special systems handling an intensive amount of data. Basic requirements are the gathering of data from heterogeneous sources, the transformation and enrichment as well as the deployment for analytical applications. Of course non-functional requirements as performance or real-time actuation also necessary while talking about specifications.\newline
 \\
-After pointing out the intend, why those systems are needed and introducing the requirements, lets focus on the content of this paper.\newline 
-In this paper the focus is set on architectural fundamentals which can be used for such systems. Therefore the reference architecture of Data Warehouse Systems is introduced first of all. Afterwards we will look upon some other commonly used architectures which use some newer ideas.
-The main objective during this research is to identify, if commonly used legacy architectures can be replaced by newer technology with will lead to some advantages.
+After pointing out the intent, the need for those systems and introducing the requirements, lets focus on the content. In this paper, the focus is set on architectural fundamentals which can be used for those systems. First the reference architecture of Data Warehouse Systems is introduced. Afterwards we will look at other commonly used architectures using some newer ideas.
+The main objective during this research is to identify if commonly used legacy architectures can be replaced by newer technology which come with some advantages.
 \newline
-Therefore microservices and some techniques e.g. self-contained-systems are introduced. Later on the idea of event streams in system landscapes is explained.\newline
+Therefore, microservices and some techniques such as self contained systems are introduced. Later on, the idea of event streams in system landscapes is explained.\newline
 Having elaborated those ideas, they will be adapted and combined into possible architectures. In this section there will be an in-depth discussion about the advantages and disadvantages of each technology.\newline
-Afterwards there will be a lookout upon the idea of Business Process Management. The underlying process-driven-architecture enables us to erase some of those previously shown disadvantages.\newline
+Afterwards, there will be an outlook on the idea of Business Process Management. The underlying process driven architecture enables us to erase some of the previously shown disadvantages.\newline
 \\
-Thus will then result into the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data-Warehouse-Architectures, a huge improvement concerning individual characteristics is possible. Even with relatively less effort. This advance should led to an optimised way of presenting various results to the user without increasing the systems complexity.\newline 
-In the end the resulting architecture will be, as described in the title, a process-driven semi-event-based microservice system, enabling us to run data intensive applications. \newline
-As we make progress in this field of research, we will make use of several other publications and use expert interviews as well to underpin this paper. 
+This will result in the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data Warehouse architectures, a huge improvement concerning individual characteristics is possible even with relatively little effort. This advance should led to an optimised way of presenting various results to the user without increasing the systems complexity.\newline 
+In the end, the resulting architecture will be (as described in the title) a process-driven semi-event-based microservice system, enabling us to run data-intensive applications. \newline
+As we make progress in this field of research, we will make use of several other publications and expert interviews to underpin this paper. 
