--- a/bibliography.bib
+++ b/bibliography.bib
@@ -68,7 +68,8 @@
 @misc{microservices,
     title   = {Interest over time into the topic 'microservices'},
     author  = {Google Trends}, 
-    url     = {https://www.google.com/trends}
+    url     = {https://www.google.com/trends},
+    note = {last visited on 28.07.2020}
 }
 
 @incollection{sinz,
@@ -85,7 +86,8 @@
 @misc{redHatMicroservices,
     title   = {What are microservices?},
     author  = {RedHat}, 
-    url     = {https://www.redhat.com/en/topics/microservices/what-are-microservices}
+    url     = {https://www.redhat.com/en/topics/microservices/what-are-microservices},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{ChallengesMicroservices,
@@ -94,7 +96,8 @@
     company = {Red Hat},
     year    = {2017}, 
     month   = {5},
-    url     = {https://developers.redhat.com/blog/2017/05/04/the-truth-about-microservices/}
+    url     = {https://developers.redhat.com/blog/2017/05/04/the-truth-about-microservices/},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{scsWolf,
@@ -103,7 +106,8 @@
     company = {innoQ Deutschlang GmbH},
     year    = {2016}, 
     month   = {11},
-    url     = {https://www.innoq.com/en/articles/2016/11/self-contained-systems-different-microservices/}
+    url     = {https://www.innoq.com/en/articles/2016/11/self-contained-systems-different-microservices/},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{scs,
@@ -112,7 +116,8 @@
     year    = {2016}, 
     month   = {11},
     url     = {https://scs-architecture.org},
-    note    = {CC BY-SA 3.0}
+    note    = {CC BY-SA 3.0},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{eventDrivenMicroservices,
@@ -122,7 +127,8 @@
     publisher   = {InfoWorld},
     year        = {2019}, 
     month       = {5},
-    url         = {https://www.infoworld.com/article/3391592/how-to-tame-event-driven-microservices.html}
+    url         = {https://www.infoworld.com/article/3391592/how-to-tame-event-driven-microservices.html},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{EventBusExplained,
@@ -131,13 +137,15 @@
     company = {Google},
     year    = {2017}, 
     month   = {10},
-    url     = {https://github.com/google/guava/wiki/EventBusExplained}
+    url     = {https://github.com/google/guava/wiki/EventBusExplained},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{kafka,
     title   = {Introduction: Apache Kafka® is a distributed streaming platform. What exactly does that mean?},
     author  = {Apache Kafka},
-    url     = {https://kafka.apache.org/intro}
+    url     = {https://kafka.apache.org/intro},
+    note = {last visited on 28.07.2020}
 }
 
 @book{bpmMethodStyle,
@@ -163,7 +171,8 @@
 @misc{bpmDef,
     title   = {BPM},
     author  = {European Association of Business Process Management},
-    url     = {http://www.eabpm.org/?page_id=5}
+    url     = {http://www.eabpm.org/?page_id=5},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{orchestrationMicroServices,
@@ -172,13 +181,15 @@
     publisher   = {Medium},
     year        = {2018}, 
     month       = {11},
-    url         = {https://blog.bernd-ruecker.com/the-microservice-workflow-automation-cheat-sheet-fc0a80dc25aa}
+    url         = {https://blog.bernd-ruecker.com/the-microservice-workflow-automation-cheat-sheet-fc0a80dc25aa},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{bpmMultiInstance,
     title   = {Camunda Docs: Task Markers - Multiple Instance},
     author  = {camunda Services GmbH},
-    url     = {https://docs.camunda.org/manual/7.6/reference/bpmn20/tasks/task-markers/#multiple-instance}
+    url     = {https://docs.camunda.org/manual/7.6/reference/bpmn20/tasks/task-markers/#multiple-instance},
+    note = {last visited on 28.07.2020}
 }
 
 @misc{dirk,
